Quick fix to prevent the ‘AM/PM’ part of the date from wrapping.

--- a/app/stylesheets/design/_public_inspection.scss
+++ b/app/stylesheets/design/_public_inspection.scss
@@ -15,8 +15,8 @@
   padding-right: 30px;
   }
 #entries #content_area.public_inspection {
-  width:660px;
-  padding-right: 40px;
+  width:670px;
+  padding-right: 30px;
   }
 
 
@@ -80,7 +80,7 @@
   display: block;
   }
 #entries dl div.column.dates {
-  width: 220px;
+  width: 225px;
   }
 #entries dl dt > div.details .column.file_info {
   width: 205px;
